more sanoid work

--- a/roles/sanoid/defaults/main.yml
+++ b/roles/sanoid/defaults/main.yml
@@ -10,7 +10,4 @@ sanoid__templates:
     autosnap: true
     autoprune: true
 
-sanoid__datasets:
-  tank:
-    template: production
-    recursive: true
+ganoid__datasets:
