--- a/roles/syncoid/tasks/syncoid_initiator.yml
+++ b/roles/syncoid/tasks/syncoid_initiator.yml
@@ -10,6 +10,7 @@
     source_connection: ""
     sink_connection: ""
     remote_connection: False
+    remote_connection_dict: False
     local_user: "{{ job['sink']['user'] | default(job['source']['user']) | default('root') }}"
   when: not remote_source and not remote_sink | bool
 
@@ -17,7 +18,6 @@
   set_fact:
     source_connection: "{{ job['source']['user'] }}@{{ job['source']['host'] }}"
     sink_connection: ""
-    remote_connection: "{{ source_connection }}"
     local_user: "{{ job['sink']['user'] | default('root') }}"
   when: remote_source | bool
 
@@ -25,8 +25,19 @@
   set_fact:
     sink_connection: "{{ job['sink']['user'] }}@{{ job['sink']['host'] }}"
     source_connection: ""
-    remote_connection: "{{ sink_connection }}"
     local_user: "{{ job['source']['user'] | default('root') }}"
+  when: remote_sink | bool
+
+- name: Define connection strings for remote source
+  set_fact:
+    remote_connection: "{{ source_connection }}"
+    remote_connection_dict: "{{ job['source'] }}"
+  when: remote_source | bool
+
+- name: Define connection strings for remote sink
+  set_fact:
+    remote_connection: "{{ sink_connection }}"
+    remote_connection_dict: "{{ job['sink'] }}"
   when: remote_sink | bool
 
 - name: Error out if both are remote
@@ -41,8 +52,15 @@
 
 - name: Build dataset strings for both local source and sink
   set_fact:
-    source_dataset_string: "{{ source_connection }}{{ job['source']['dataset'] }}"
+    source_dataset_string: "{{ source_connection }}:{{ job['source']['dataset'] }}"
     sink_dataset_string: "{{ sink_connection }}{{ job['sink']['dataset'] }}"
+  when: source_connection
+
+- name: Build dataset strings for both local source and sink
+  set_fact:
+    source_dataset_string: "{{ source_connection }}{{ job['source']['dataset'] }}"
+    sink_dataset_string: "{{ sink_connection }}:{{ job['sink']['dataset'] }}"
+  when: sink_connection
 
 - name: Ensure local user exists
   user:
@@ -52,12 +70,19 @@
 
 - name: Copy ssh key priv key to initator
   copy:
-    src: "{{ job['private_key_file'] }}"
+    src: "{{ job['ssh_private_key_file'] }}"
     dest: "{{ local_user_info['home'] }}/.ssh/"
     owner: "{{ local_user }}"
-    mode: '0644'
+    mode: '0600'
   register: ssh_priv_key_info
   when: remote_sink or remote_source | bool
+
+- name: Ensure ssh host key known
+  lineinfile:
+    dest: ~/.ssh/known_hosts
+    create: yes
+    state: present
+    line: "{{ lookup('pipe', 'ssh-keyscan -trsa ' + remote_connection_dict.host ) }}"
 
 - name: Verify that we can ssh into the remote sink machine with given username and ssh key
   command: "ssh -q -i {{ ssh_priv_key_info.dest }} -o ConnectTimeout=5 {{ remote_connection }} 'exit 0'"
@@ -75,10 +100,13 @@
 
 - name: Build syncoid arguments
   set_fact:
-    syncoid_arguments: "{{ [' '] | product(job['syncoid_arguments']) | map('join') | list }}"
+    syncoid_arguments: "{{ job['syncoid_arguments'] | join(' ') }}"
+    job_name: "syncoid-{{ source_dataset_string }}-{{ sink_dataset_string }}"
 
 - name: Generate cron task for syncoid
   cron:
-    name: "sanoid {{ source_dataset_string }}->{{ sink_dataset_string }}"
+    name: "{{ job_name | regex_replace('\/', '_') }}"
     job: "/usr/sbin/syncoid {{ source_dataset_string }} {{ sink_dataset_string }} {{ syncoid_arguments }} --sshkey {{ ssh_priv_key_info.dest }}"
     minute: "*/15"
+    cron_file: "syncoid"
+    user: "root"
