Experiment with flock for sanoid

--- a/roles/sanoid/tasks/main.yml
+++ b/roles/sanoid/tasks/main.yml
@@ -29,5 +29,5 @@
     name: sanoid
     cron_file: sanoid
     user: root
-    job: "/usr/sbin/sanoid --cron"
+    job: "/usr/bin/flock /var/run/sanoid.flock /usr/sbin/sanoid --cron"
     minute: "*/15"
