--- a/playbooks/sanoid.yml
+++ b/playbooks/sanoid.yml
@@ -7,5 +7,8 @@
                    | combine(inventory__host_environment  | d({})) }}'
 
   roles:
+    - role: cadair.sanoid.install_sanoid
+      tags: [ 'role::sanoid', 'skip::sanoid' ]
+
     - role: cadair.sanoid.sanoid
       tags: [ 'role::sanoid', 'skip::sanoid' ]
