--- a/roles/syncoid/tasks/syncoid_initiator.yml
+++ b/roles/syncoid/tasks/syncoid_initiator.yml
@@ -106,10 +106,31 @@
     syncoid_arguments: "{{ syncoid_arguments + ['--sshkey', ssh_priv_key_info.dest] }}"
   when: ssh_priv_key_info.dest is defined
 
-- name: Generate cron task for syncoid
+- name: Configure cron task for syncoid (if used)
   cron:
+    state: "{{ 'absent' if 'systemd_timer_calendar' in job else 'present' }}"
     name: "{{ job_name | regex_replace('\/', '_') }}"
     job: "{{ job.pre_cron_commands | default('') }} /usr/sbin/syncoid {{ source_dataset_string }} {{ sink_dataset_string }} {{ syncoid_arguments | join(' ') }} {{ job.post_cron_commands | default('') }}"
     minute: "{{ job.cron_minute | default('*/15') }}"
     cron_file: "syncoid"
     user: "{{ local_user }}"
+
+- name: Template syncoid service
+  template:
+    src: templates/systemd/syncoid.service.j2
+    dest: "/etc/systemd/system/{{ job_name | regex_replace('\/', '_') | regex_replace(':', '_')}}.service"
+  when: job.systemd_timer_calendar is defined
+
+- name: Template syncoid timer
+  template:
+    src: templates/systemd/syncoid.timer.j2
+    dest: "/etc/systemd/system/{{ job_name | regex_replace('\/', '_') | regex_replace(':', '_')}}.timer"
+  when: job.systemd_timer_calendar is defined
+
+- name:
+  systemd:
+    name: "{{ job_name | regex_replace('\/', '_') | regex_replace(':', '_')}}.timer"
+    state: started
+    enabled: true
+    daemon_reload: true
+  when: job.systemd_timer_calendar is defined
